--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -4,7 +4,7 @@
 
   <div class="row">
       <div class=" col-6 d-flex justify-content-start">
-          <button type="button" class="btn btn-danger" (click)= "showAvailableRoomsModal()">Beschikbare kamers</button>
+          <button type="button" class="btn btn-primary" (click)= "showAvailableRoomsModal()">Beschikbare kamers</button>
           <!--a href="/managementportal/kamers-form" class="btn btn-primary" role="button" aria-pressed="true">Add Room</a-->
         </div>
     <div class=" col-6 d-flex justify-content-end">
