--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -12,7 +12,7 @@
         <!--a href="/managementportal/kamers-form" class="btn btn-primary" role="button" aria-pressed="true">Add Room</a-->
       </div>
   </div>
-
+  <pre>{{closeResult}}</pre>
   <br />
   <table class="table table-striped table-sm">
     <thead>
