--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -1,5 +1,5 @@
 <div>
-  <!--pre>{{kamers | json}}</pre-->
+  <!--pre>{{kamers}}</pre-->
   <br />
 
   <div class="row">
@@ -28,13 +28,15 @@
     </tr>
     </thead>
     <tbody>
-
+    <div *ngIf="(kamers| async)?.length>0, then welkamers else geenKamers"></div>
+    <ng-template #welkamers>
     <tr *ngFor="let kamer of (kamers | async | kamersfilter: show | sortgrid:field)">
         <td>{{ kamer.kamerNaam }}</td>
         <td>{{ kamer.kamerType }}</td>
         <td>{{ kamer.kamerLigging }}</td>
         <td>{{ kamer.aantalPersonen }}</td>
         <td>{{ kamer.prijs | currency: "EUR" }}</td>
+
         <!--td *ngIf="showResButton">
           <i class="fas fa-marker mr-2" placement="top" ngbTooltip="Reserveren" (click)="openFormKamerReserveringModal(kamer.kamerNaam)"></i>
         </td-->
@@ -44,6 +46,10 @@
           <i class="fas fa-trash-alt mr-2" placement="top" ngbTooltip="Verwijderen" (click)="onSelect(kamer); openSm(deleteModal)"></i>
         </td>
       </tr>
+    </ng-template>
+    <ng-template #geenKamers>
+      <div class="Noresultfound">Helaas geen kamers beschikbaar in deze periode</div>
+      </ng-template>
     </tbody>
   </table>
 </div>
