--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
@@ -12,13 +12,13 @@
     <table class="table table-striped table-sm">
       <thead>
       <tr>
-        <th (click)="clickColumnHandler('voornaam')">Voornaam</th>
-        <th (click)="clickColumnHandler('achternaam')">Achternaam</th>
-        <th (click)="clickColumnHandler('telefoonnummer')">Telefoon</th>
-        <th (click)="clickColumnHandler('emailadres')">E-mail</th>
-        <th (click)="clickColumnHandler('datumvan')">Aankomst</th>
-        <th (click)="clickColumnHandler('datumtot')">Vertrek</th>
-        <th (click)="clickColumnHandler('kamernaam')">Kamer</th>
+        <th (click)="clickColumnHandler('voornaam')">Voornaam<i class="fa fa-fw fa-sort"></i></th>
+        <th (click)="clickColumnHandler('achternaam')">Achternaam<i class="fa fa-fw fa-sort"></i></th>
+        <th (click)="clickColumnHandler('telefoonnummer')">Telefoon<i class="fa fa-fw fa-sort"></i></th>
+        <th (click)="clickColumnHandler('emailadres')">E-mail<i class="fa fa-fw fa-sort"></i></th>
+        <th (click)="clickColumnHandler('datumvan')">Aankomst<i class="fa fa-fw fa-sort"></i></th>
+        <th (click)="clickColumnHandler('datumtot')">Vertrek<i class="fa fa-fw fa-sort"></i></th>
+        <th (click)="clickColumnHandler('kamernaam')">Kamer<i class="fa fa-fw fa-sort"></i></th>
         <th></th>
       </tr>
       </thead>
@@ -26,11 +26,11 @@
       <tr *ngFor="let kamerreservering of (kamerreserveringen | async |  sortgrid:field)" >
         <td>{{kamerreservering.voornaam}}</td>
         <td>{{kamerreservering.achternaam}}</td>
-        <td>{{kamerreservering.telefoonnummer}}</td>
-        <td>{{kamerreservering.emailadres}}</td>
-        <td>{{kamerreservering.datumvan}}</td>
-        <td>{{kamerreservering.datumtot}} </td>
-        <td>{{kamerreservering.kamernaam}}</td>
+        <td>{{kamerreservering.telefoonnummer}}
+        <td>{{kamerreservering.emailadres}}
+        <td>{{kamerreservering.datumvan}}
+        <td>{{kamerreservering.datumtot}}
+        <td>{{kamerreservering.kamernaam}}
         <td class="text-right">
           <i class="fas fa-edit mr-2" placement="top" ngbTooltip="Toon gegevens" (click)="openFormKamerReserveringDetailsModal(kamerreservering)"></i>
           <i class="fas fa-trash-alt mr-2" placement="top" ngbTooltip="Verwijderen" (click)="onSelect(kamerreservering); openSm(deleteReseveringModal)" ></i>
