--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -17,11 +17,11 @@
   <table class="table table-striped table-sm">
     <thead>
     <tr>
-      <th (click)="clickColumnHandler('kamerNaam')">Kamernaam</th>
-      <th (click)="clickColumnHandler('kamerType')">Kamertype</th>
-      <th (click)="clickColumnHandler('kamerLigging')">Kamerligging</th>
-      <th (click)="clickColumnHandler('aantalPersonen')">Aantalpersonen</th>
-      <th (click)="clickColumnHandler('prijs')">Prijs</th>
+      <th (click)="clickColumnHandler('kamerNaam')">Kamernaam<i class="fa fa-fw fa-sort"></i></th>
+      <th (click)="clickColumnHandler('kamerType')">Kamertype<i class="fa fa-fw fa-sort"></i></th>
+      <th (click)="clickColumnHandler('kamerLigging')">Kamerligging<i class="fa fa-fw fa-sort"></i></th>
+      <th (click)="clickColumnHandler('aantalPersonen')">Aantalpersonen<i class="fa fa-fw fa-sort"></i></th>
+      <th (click)="clickColumnHandler('prijs')">Prijs<i class="fa fa-fw fa-sort"></i></th>
       <th></th>
       <!--th *ngIf="showResButton"></th-->
 
