--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
@@ -3,14 +3,15 @@
   <br />
 
   <div class="row">
-    <div class=" col-6 d-flex justify-content-start">
+    <div class=" col-8 d-flex text-sm-left">
       <button type="button" class="btn btn-primary" [routerLink]="['/managementportal/kamers/reseveer']" >Resevering toevoegen</button>
     </div>
-
-    <div class=" col-6 d-flex justify-content-end">
-      <button type="button" class="btn btn-primary" (click)="loadCurrentResevering()" >Huidige reseveringen</button>
-      <div col-1> </div>
+    <div class=" col-2 d-flex text-sm-right">
       <button type="button" class="btn btn-primary" (click)="loadHistoriesResevering()" >Historie reseveringen</button>
+    </div>
+
+    <div class=" col-2 d-flex text-sm-right">
+      <button type="button" class="btn btn-primary" (click)="loadCurrentResevering()" >Huidige reseveringen</button>
     </div>
   </div>
   <br />
