sort on string and num, prijs columns added in sort and front page standard sort on prijs

--- a/frontend/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/frontend/src/app/frontend/components/restaurant/restaurant.component.html
@@ -67,7 +67,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let gerecht of (filteredGerechten$ | async)">
+      <tr *ngFor="let gerecht of (filteredGerechten$ | async | sortgrid:'prijs')">
         <td>{{gerecht.naam}}</td>
         <td>{{gerecht.prijs | currency: 'EUR'}}</td>
       </tr>
