--- a/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
@@ -9,7 +9,7 @@
         <th class="handCursor" (click)="clickColumnHandler('naam')">Naam</th>
         <th class="handCursor" (click)="clickColumnHandler('type')">Type</th>
         <th class="handCursor" (click)="clickColumnHandler('subtype')">SubType</th>
-        <th>Prijs</th>
+        <th class="handCursor" (click)="clickColumnHandler('prijs')">Prijs</th>
         <th></th>
       </tr>
     </thead>
