--- a/frontend/src/app/managementportal/components/restaurant/ingredienten/ingredienten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/ingredienten/ingredienten.component.html
@@ -8,7 +8,7 @@
       <tr>
         <th class="handCursor" (click)="clickColumnHandler('naam')">Naam</th>
         <th class="handCursor" (click)="clickColumnHandler('eenheid')">Eenheid</th>
-        <th>Prijs</th>
+        <th class="handCursor" (click)="clickColumnHandler('prijs')">Prijs</th>
         <th></th>
       </tr>
     </thead>
