--- a/frontend/src/app/managementportal/components/restaurant/reserveringen/reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/reserveringen/reserveringen.component.html
@@ -9,7 +9,7 @@
       <th class="handCursor" (click)="clickColumnHandler('aanvangstijd')">Aanvangstijd</th>
       <th class="handCursor" (click)="clickColumnHandler('personen')">Personen</th>
       <th class="handCursor" (click)="clickColumnHandler('naam')">Naam</th>
-      <th>Telefoon</th>
+      <th class="handCursor" (click)="clickColumnHandler('telefoon')">Telefoon</th>
       <th></th>
     </tr>
   </thead>
